Fixed manpage images out of boundaries.

--- a/v/styles/style.css
+++ b/v/styles/style.css
@@ -459,9 +459,10 @@ form {
   display: flex;
   justify-content: center;
   align-items: center;
+  /*max-width: 50%;*/
 }
 .inst-pics img {
-  height: 10vw;
+  max-height: 5rem;
   margin: 0 2vw;
 }
 .inst-pics img.sig {
